modified few values

--- a/myapp.properties
+++ b/myapp.properties
@@ -1,4 +1,3 @@
-user-name=Ramesh
-address=Bangalore
-user.username=Akula
-user.address=Bangalore
+myapp.user.first.name=AKULA
+myapp.user.last.name=RAMESH
+myapp.user.address=BANGALORE
